--- a/presentation.html
+++ b/presentation.html
@@ -17,7 +17,7 @@
     vous pouvez visiter notre siège
 </p>
 <a href="https://lassmed.github.io/tpcss/?fbclid=IwAR0W8Lp4Kot5dsFyRigrBKgeGhrZ3BBhVbxPmklZr1mEZnwng-mlhTVHx3c">
-<img src="../image.jpg" alt="lien vers notre siege">
+<img src="image.jpg" alt="lien vers notre siege">
 </a> <br>
 <a href="index.html">Accueil</a>
 <a  href="service.html">Service</a>
